# SLD_Explorer

./: README.md  run.txt
Docs/Prolog/: unification.pl
Prolog/: main.pl
Prolog/core/: sld_engine.pl  unification.pl
Prolog/tree/: tree_export.pl
backend/: pyproject.toml
backend/sld_explorer_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  main.py  routes.py  schemas.py
backend/src/parser/: __init__.py  lexer.py  parser.py  terms.py
backend/src/sld/: __init__.py  resolution.py
backend/src/unification/: __init__.py  unify.py
backend/tests/: __init__.py  test_api.py  test_lexer.py  test_parser.py  test_resolution.py  test_terms.py  test_unification.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: CodeEditor.tsx  ControlPanel.tsx  CustomNode.tsx
frontend/src/hooks/: useSLDTree.ts
frontend/src/services/: api.ts
frontend/src/types/: types.ts
