[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sld-explorer-backend"
version = "0.1.0"
description = "Backend for SLD_Explorer - SLD Resolution and Unification"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "pydantic>=1.10.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages]
find = {where = ["."]}